2009-01-12  Darren Kenny  <darren.kenny@sun.com>

	* common/libnwamui.h, common/libnwamui.c:
	  Add function to map a GList of NwamuiCond to a list of libnwam
	  condition strings. Also correct a type in the name of the function
	  nwamui_util_glist_to_strv().
	* common/nwamui_cond.h, common/nwamui_cond.c: 
	  Parse the condition string, and also provide function to convert
	  condition to a libnwam condition string.
	* common/nwamui_ncu.h, common/nwamui_ncu.c: 
	  Add function to allow you to set properties in a nwam_ncu_handle_t.
	  Start move from storing a copy of data in NwamuiNcu to using the
	  handle itself to store the values - this will facilitate an easier
	  revert/resync and commit mechanism using the libnwam handles.
	* common/nwamui_wifi_net.h, common/nwamui_wifi_net.c: 
	  Add two properties - priority and bssid_list - both for use in the
	  favourites list.
	* nwam_core/usr/include/libdlether.h:
	  Add a missing header file from the libdladm collection.

2009-01-12  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/Makefile.am:
	* capplet/capplet-utils.c: (capplet_update_nwamui_obj_treeview):
	* capplet/capplet-utils.h:
	* capplet/main.c: (customwidgethandler), (main):
	* capplet/nwam-manager-properties.glade:
	* capplet/nwam_conn_stat_panel.c: (nwam_compose_tree_view),
	(nwam_conn_status_panel_init), (nwam_conn_status_panel_refresh),
	(nwam_conn_status_update_status_cell_cb), (on_nwam_enm_notify_cb):
	* capplet/nwam_conn_stat_panel.h:
	* capplet/nwam_env_pref_dialog.c: (nwam_compose_tree_view),
	(default_svc_status_cb):
	* capplet/nwam_env_svc.c: (nwam_compose_tree_view):
	* capplet/nwam_location_dialog.c: (nwam_pref_init),
	(nwam_location_dialog_class_init), (location_set_property),
	(location_get_property), (row_deleted_cb), (row_inserted_cb),
	(rows_reordered_cb), (nwam_compose_tree_view),
	(nwam_location_dialog_init), (nwam_location_dialog_new),
	(nwam_location_dialog_run), (nwam_location_dialog_refresh),
	(nwam_location_dialog_finalize),